# LabelLLM

./: .env  .gitignore  .gitlab-ci.yml  .releaserc.yaml  README.md  deployrc.dev.json  deployrc.iceberg-test.json  deployrc.iceberg.json  deployrc.json  deployrc.prod.json  deployrc.test.json  deployrc.uat.json  docker-compose.override.yml  docker-compose.traefik.yml  docker-compose.yaml
backend/: .env  .gitignore  Dockerfile  README.md  pdm.toml  pyproject.toml
backend/app/: README.md  gunicorn_conf.py  main.py  worker.py
backend/app/api/: deps.py  router.py
backend/app/api/v1/: router.py
backend/app/api/v1/const/: common.py
backend/app/api/v1/endpoints/: audit_task.py  auth.py  file.py  label_task.py  router.py  team.py  team_invitation.py  team_member.py  user.py
backend/app/api/v1/endpoints/operator/: __init__.py  label_task.py  label_task_stat.py
backend/app/client/: __init__.py  deepl.py  minio.py  oss.py  sso.py
backend/app/core/: config.py  db.py  exceptions.py  logger.py  security.py
backend/app/crud/: __init__.py  base.py  crud_data.py  crud_file.py  crud_record.py  crud_team.py  crud_team_invitation.py  crud_user.py
backend/app/db/: init_db.py  session.py
backend/app/logger/: logger.py
backend/app/middleware/: middleware.py
backend/app/models/: __init__.py  audit_task.py  data.py  file.py  label_task.py  models.py  record.py  team.py  team_invitation.py  user.py
backend/app/scheduler/: __init__.py  init_scheduler.py  task.py
backend/app/schemas/: __init__.py  auth.py  data.py  entity.py  evaluation.py  file.py  message.py  record.py  task.py  team.py  user.py
backend/app/schemas/operator/: __init__.py  stats.py  task.py
backend/app/util/: __init__.py  stats.py
backend/migrations/: 2023_0615_1112_mig_team_member.py
backend/migrations/models/: 0_20240507171945_init.py  1_20240507174000_update.py
backend/scripts/: start.sh  worker.sh
backend/tests/: test.py
frontend/: .eslintignore  .eslintrc.js  .npmrc  .prettierrc.js  .stylelintrc.js  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  rollup.config.ts  tailwind.config.js  tsconfig.json  tsconfig.util.json  vite.config.dev.ts  vite.config.prod.ts
(+300 files in other folders)
