[project]
name = "app"
version = "1.0.0"
description = "Default template for PDM package"
authors = [
    {name = "luxuncang", email = "luxuncang@qq.com"},
]
dependencies = [
    "fastapi[all]>=0.111.0",
    "aerich>=0.7.2",
    "uvicorn[standard]>=0.29.0",
    "tortoise-orm[accel,asyncpg]>=0.20.1",
    "pydantic-settings>=2.2.1",
]
requires-python = ">=3.10"
readme = "README.md"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
app.cmd = "python app/main.py"
app.env_file = ".env"

gensql.cmd = "aerich migrate"
gensql.env_file = ".env"

updb.cmd = "aerich upgrade"
updb.env_file = ".env"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.2.0",
]
doc = [
    "mkdocs>=1.6.0",
]
lint = [
    "ruff==0.4.1",
]

[tool.aerich]
tortoise_orm = "app.core.db.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
